// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change the color of the buttons 1`] = `
<DocumentFragment>
  <button
    class="button selected"
  >
    Gp
  </button>
</DocumentFragment>
`;

exports[`change the color of the buttons 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="button selected"
  />
</DocumentFragment>
`;
